data/derived/sp14/progs/unify/prog1065.ml.out
Characters 159-170:
  | Cosine(p1) -> evalhelper buildCosine(p1) x y
                             ^^^^^^^^^^^
Error: This expression has type expr -> expr
       but an expression was expected of type expr
